# QT-demo

./: CMakeLists.txt  Makefile  README.md  eventCrashes.cpp  eventCrashes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  run.sh
sentry-native/: CMakeLists.txt
sentry-native/examples/: example.c
